--- a/Hi_Opencv/Hi_Opencv/Hi_Opencv.ui
+++ b/Hi_Opencv/Hi_Opencv/Hi_Opencv.ui
@@ -761,6 +761,19 @@
        <string>start</string>
       </property>
      </widget>
+     <widget class="QLabel" name="label_by1">
+      <property name="geometry">
+       <rect>
+        <x>910</x>
+        <y>60</y>
+        <width>61</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>请选择功能</string>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
@@ -811,6 +824,10 @@
    <extends>QTabWidget</extends>
    <header>bianyuanjiance.h</header>
    <container>1</container>
+   <slots>
+    <slot>on_sobel_show()</slot>
+    <slot>on_laplace_show()</slot>
+   </slots>
   </customwidget>
  </customwidgets>
  <resources>
@@ -824,8 +841,8 @@
    <slot>on_median_show()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>95</x>
-     <y>330</y>
+     <x>86</x>
+     <y>331</y>
     </hint>
     <hint type="destinationlabel">
      <x>257</x>
@@ -840,8 +857,8 @@
    <slot>on_blur_show()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>95</x>
-     <y>131</y>
+     <x>86</x>
+     <y>132</y>
     </hint>
     <hint type="destinationlabel">
      <x>354</x>
@@ -856,8 +873,8 @@
    <slot>on_gaussian_show()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>95</x>
-     <y>218</y>
+     <x>86</x>
+     <y>219</y>
     </hint>
     <hint type="destinationlabel">
      <x>193</x>
@@ -888,8 +905,8 @@
    <slot>on_Bilateral_show()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>95</x>
-     <y>425</y>
+     <x>86</x>
+     <y>426</y>
     </hint>
     <hint type="destinationlabel">
      <x>147</x>
@@ -910,6 +927,38 @@
     <hint type="destinationlabel">
      <x>797</x>
      <y>555</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_blur_2</sender>
+   <signal>clicked()</signal>
+   <receiver>tabWidget</receiver>
+   <slot>on_sobel_show()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>47</x>
+     <y>79</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>16</x>
+     <y>67</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_blur_3</sender>
+   <signal>clicked()</signal>
+   <receiver>tabWidget</receiver>
+   <slot>on_laplace_show()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>62</x>
+     <y>139</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>7</x>
+     <y>130</y>
     </hint>
    </hints>
   </connection>
